lab and lesbeeans

--- a/Beegin.html
+++ b/Beegin.html
@@ -1262,10 +1262,33 @@ interactions, free yourself, get {stolen Royal Jelly}, head back to [[Main Plaza
 &lt;&lt;endif&gt;&gt;</tw-passagedata>
 <tw-passagedata pid="51" name="Lab" tags="" position="528,1271">&lt;&lt;stopallaudio&gt;&gt;
 &lt;&lt;audio jail loop volume 0.2 play&gt;&gt;
-Dr. Plottenpoint is here, you explain situation. She’s intrigued but very busy. She’ll help you, but only if you perform a very unsavory task for her - get her lout of an ex sick out of her mind so she won’t be able to go to the bar for at least a month. She gives you {concoction}.&lt;&lt;set $concoction = true&gt;&gt; Her ex works at the SHF.
+You cautiously walk into a very fancy science lab. You tuck your wings in tight behind you, careful not to knock over any of the expensive-looking equipment. Hidden among books and beakers, a tall bee is hurriedly buzzing back and forth.
+
+&quot;Doctor Plottenpoint?&quot; you ask. She stops on a dime and turns to you.
+
+&quot;Yes?&quot; she asks in a high, tremulous voice.
+
+***Explain the situation***
+
+You explain the sitch to her in a way that saves time for both the reader and writer. While hesitant at first, the idea of concocting the perfect royal jelly fills her with anticipation, and she readily agrees to attempt this noble task... on one condition: She wants you to do something a tad unscrupulous for her.
+
+***&quot;Honey, at this point you could ask me to murder someone and I wouldn&#39;t blink a compound eye.&quot;***
+
+She laughs at this. You don&#39;t. She goes on to explain that she wants to get some revenge on her ex, a drunk lout named Barbara. Every day on break from her job at the SHF, she spends her entire lunch hour getting soused at The End. The good doctor knows plenty of people at the SHF who aren&#39;t too happy with Barbara&#39;s behavior, but in this economy, they need every hand they can get, even shaky ones. Doctor Plottenpoint produces a corked flask and hands it to you.
+
+&quot;Just head on over to the SHF and give this to the forebee, she&#39;ll know what to do with it. And please, hurry - I&#39;d love for you to get this done before her lunch break. One sip of nthis, and as soon as she even gets a wiff of alcohol, she&#39;ll be on the floor retching.&quot; Her smile of grim satisfaction impresses upon you that you should never, under any circumstances, piss off a scientist.
+
+&lt;&lt;set $concoction = true&gt;&gt; Her ex works at the SHF.
 
 &lt;&lt;if $poisonedEx&gt;&gt;\
-Dr. Plottenpoint tells you she’ll do her best, but she need at least a week of solid uninterrupted work. She gives you a faintly glowing royal jelly, but says she simply must leave to see the Queen. You hurry back to the palace.
+You return and tell Dr. Plottenpoint that the deed has been done. She beams and claps in a way that would be adorable, if you were not wondering whether or not you just committed a murder. &quot;Okay, now down to business,&quot; she says. Her expression becomes serious. &quot;I&#39;ll try my best, but I&#39;d need at least a week of solid uninterrupted work to get this to a point I&#39;m satisfied with.&quot; You nod and start to leave, but stop as a soft hand is placed on yours. You look up into beautiful compound eyes, each facet a reflection of a different emotion, a different part of the soul of the woman in front of you. &quot;Stay,&quot; she says softly, somewhere between a question and a command.
+
+***You stay.***
+
+When she says &quot;There, I think that&#39;s all I can get done before the parade starts,&quot; you are surprised to find your head on her shoulder. You get up quickly, dusting your coat off, and... are you blushing?? You never blush!
+
+&quot;Um, yes, that should be good enough,&quot; you stammer. &quot;Um, uh, I think the parade is starting, gotta go!&quot; You grab the proferred vial and vamoose out of there as fast as you can, not slowing down until you reach the [[Elder&#39;s room|Palace Elder]].
+
 &lt;&lt;set $glowingRoyalJelly = true&gt;&gt;
 &lt;&lt;endif&gt;&gt;\</tw-passagedata>
 <tw-passagedata pid="52" name="Note on ***" tags="" position="588,5">To make things easier, I surround a word or phrase with triple asterisks ***like this*** to denote that the player clicks on it, and the next block of words down to the next triple asterisks appear. See disease for example of this
@@ -1414,7 +1437,10 @@ What the hell.</tw-passagedata>
 1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1
 
 You hurry to the Palace Elder&#39;s room, intuition and some vague sense of destiny guiding you. She&#39;s staring at a large ornate clock, an unreadable expression upon her face. She glances back at you as you open the door, and the briefest expression of relief flashes across her wizened features. &quot;Do you have it?&quot; You solemnly hand the royal jelly over. You consider telling her of the tribulations you went through to procure the jelly, but decide against it. &quot;Excellent, excellent. I&#39;ll get this to the parade immediately. Please, go into that [[side room]] over there, and wait until I return. And //stay there//, no matter what you see, okay?
-</tw-passagedata>
+
+2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2
+
+shit happenjs</tw-passagedata>
 <tw-passagedata pid="63" name="Palace Side" tags="" position="1101,2005">&lt;&lt;audio parade volume 0.1&gt;&gt;
 Hurrying as quick as you can, but taking care not to damage your precious cargo, you rush to the palace. Normally, getting in would be a very tall order, but almost all the drones are now on the parade route, leaving only a couple disgruntled drones behind to stand guard. Waiting for just the right moment, you are able to zip past their line of sight and let yourself in through the side kitchens entrance. There&#39;s one sleepy bee lazily stirring a pot suffusing an amber glow upon her face, and you simply walk past her with a curt nod. She pays you no mind. Darting around the palace halls with a frankly unecessary amount of stealth, you quickly make your way towards the [[Palace Elder]].</tw-passagedata>
 <tw-passagedata pid="64" name="side room" tags="" position="96,1827">&lt;&lt;stopallaudio&gt;&gt;
