--- a/Beegin.html
+++ b/Beegin.html
@@ -442,7 +442,9 @@ body[data-tags~=t8n-warp].transition-out {
 
 
 
+
 </style><script role="script" id="twine-user-script" type="text/twine-javascript">
+
 
 
 
@@ -649,7 +651,9 @@ As you perform the dance, the Granite Rose glows stronger and stronger until all
 &lt;&lt;elseif $warpTimes === 2&gt;&gt;\
 You perform the dance, each step feeling more natural than the last. Once again, the Granite Rose glows stronger and stronger until all you can see is the sacred purple light. As you feel yourself slipping away, you faintly hear the Elder curse, as if from far away. &quot;Shit. Hey, I forgot to mention - you&#39;re gonna want to look up Doctor Plottenpoint - she&#39;s your best bet. You can find her -&quot; She is drowned out by the complex and beautiful silence of the void. She sings to you, the void, and again you answer her with a dance. You almost find yourself humming along.
 &lt;&lt;elseif $warpTimes &gt; 2&gt;&gt;\
-Things are similar but bad in a writerly way that makes the reader cry at the sheer beauty of it all
+As you perform the now-familiar dance, the Granite Rose glows stronger and stronger until all you can see is the sacred purple light. As the light grows stronger, you feel calmer, more at peace. You are coming to accept that there is a long road ahead of you. And it will be okay, as long as you have the Granite Rose... and the void. She sings for you, a joyous symphony of destruction, and you dance and clap and sing along. Your feet tap a melody written for you by an ancient unknowable power, and your abdomen plays the harmony.
+
+[[You give yourself to the void, and she gives of herself in return.]]
 &lt;&lt;endif&gt;&gt;\
 As you dance, you lose all your \
 &lt;&lt;click &quot;senses&quot;&gt;&gt;
@@ -1287,7 +1291,7 @@ interactions, free yourself, find out about {Chekov Plottenpoint&#39;s first nam
 &lt;&lt;set $royalJelly += 1&gt;&gt;
 interactions, free yourself, get {stolen Royal Jelly}, head back to [[Main Plaza]] 
 &lt;&lt;endif&gt;&gt;</tw-passagedata>
-<tw-passagedata pid="51" name="Lab" tags="" position="528,1271">&lt;&lt;stopallaudio&gt;&gt;
+<tw-passagedata pid="50" name="Lab" tags="" position="528,1271">&lt;&lt;stopallaudio&gt;&gt;
 &lt;&lt;audio jail loop volume 0.2 play&gt;&gt;
 You cautiously walk into a very fancy science lab. You tuck your wings in tight behind you, careful not to knock over any of the expensive-looking equipment. Hidden among books and beakers, a tall bee is hurriedly buzzing back and forth.
 
@@ -1467,10 +1471,12 @@ You hurry to the Palace Elder&#39;s room, intuition and some vague sense of dest
 
 2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2
 
-shit happenjs</tw-passagedata>
-<tw-passagedata pid="63" name="Palace Side" tags="" position="1101,2005">&lt;&lt;audio parade volume 0.1&gt;&gt;
+You hurry to the Palace Elder&#39;s room, intuition and some vague sense of destiny guiding you. And the fact that you&#39;ve done this before. She&#39;s staring at a large ornate clock, an unreadable expression upon her face. She glances back at you as you open the door, and simply nods. &quot;Do you have it?&quot; You solemnly hand the enhanced royal jelly over. She looks at it and purses her lips. &quot;No, no, this won&#39;t do.&quot; She cuts off your protest before you even open your mouth. &quot;I&#39;ll explain in a bit. Now, go out, turn left, and enter the third door on your right. You&#39;ll know what to do next.&quot;
+
+You acquiesce, albeit with a small amount of grumbling. &quot;I heard that!&quot; she calls at your [[retreating|side room]] back.</tw-passagedata>
+<tw-passagedata pid="62" name="Palace Side" tags="" position="1101,2005">&lt;&lt;audio parade volume 0.1&gt;&gt;
 Hurrying as quick as you can, but taking care not to damage your precious cargo, you rush to the palace. Normally, getting in would be a very tall order, but almost all the drones are now on the parade route, leaving only a couple disgruntled drones behind to stand guard. Waiting for just the right moment, you are able to zip past their line of sight and let yourself in through the side kitchens entrance. There&#39;s one sleepy bee lazily stirring a pot suffusing an amber glow upon her face, and you simply walk past her with a curt nod. She pays you no mind. Darting around the palace halls with a frankly unecessary amount of stealth, you quickly make your way towards the [[Palace Elder]].</tw-passagedata>
-<tw-passagedata pid="63" name="side room" tags="" position="96,1827">&lt;&lt;stopallaudio&gt;&gt;
+<tw-passagedata pid="63" name="side room" tags="" position="87,1787">&lt;&lt;stopallaudio&gt;&gt;
 1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1-1
 You enter the side room, which would feel more like a glorified closet if it wasn&#39;t for the door at the opposite end of the room, and wait. It seems like ages until, through a crack in the door, you see the Palace Elder return, dragging //you// by the arm. You wince and reflexively rub at the still-tender spot on your wrist. She really does have quite the grip. You watch in fascination as she takes out the Granite Rose that is still currently around your neck, and puts it on the other you&#39;s neck. The dance is performed, and you disappear from sight. Well, not disappear all at once. More, you just fade away, leaving only a barely perceptible shadow of a ghost behind. You gulp nervously, wondering how watching it happen is somehow freakier than actually doing it.
 
@@ -1506,7 +1512,25 @@ MAKE THIS SHIT CLICKY AND INTERACTIVE N SHIT
 
 
 
+2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2-2
 
+You follow the Elder&#39;s directions, and find yourself walking through the back door of the small side room you had been ushered into earlier. You know this because the room looks familiar. And also you see yourself inside, peering through the crack in the door, at... yourself. Beesus, this is getting complicated quick. You sidle in a little ways back from the previous you, and listen to a whole bunch of exposition all over again. So that&#39;s why she told you not to look backwards. Wait, but what would happen if //you// looked...
+
+The Elder grabs your arm and physically yanks you out of your thoughts. It&#39;s kind of discomforting. &quot;Don&#39;t. Look. //Back//.&quot; she spits out. You don&#39;t. &quot;You got some good progress made, but the royal jelly is nowhere pure enough, it wasn&#39;t worth it to bother administration. Did Chekov say how long it would take?&quot;
+
+&quot;Who?&quot;
+
+&quot;Doctor Plottenpoint, you daft child. What did she say?&quot;
+
+&quot;Oh, yeah. She said something about a week?&quot; you say, feeling stupid for not knowing her first name.
+
+&quot;Well that&#39;s just how much time you&#39;ll have to take.&quot;
+
+&quot;But, that would take -&quot;
+
+&quot;Many many trips. Many dances. I know. But it will be worth it. I promise.&quot; You gulp and nod. You really want to look behind yourself now.
+
+[[And you also really, //really//, don&#39;t.|Warp]]
 
 
 
@@ -1517,6 +1541,24 @@ MAKE THIS SHIT CLICKY AND INTERACTIVE N SHIT
 </tw-passagedata>
 <tw-passagedata pid="64" name="Fulfill End" tags="" position="687,2160">&lt;&lt;stopallaudio&gt;&gt;&lt;&lt;audio fulfillend loop play&gt;&gt;</tw-passagedata>
 <tw-passagedata pid="65" name="Break End" tags="" position="855,2157">&lt;&lt;stopallaudio&gt;&gt;&lt;&lt;audio breakend loop play&gt;&gt;</tw-passagedata>
+<tw-passagedata pid="66" name="You give yourself to the void, and she gives of herself in return." tags="" position="263,930">You come to in the Main Plaza, as usual. You waste no time getting to Doctor Plottenpoint&#39;s lab. You explain the situation to her, perhaps being a little too familiar for a first meeting, but she doesnt seem to mind. You hand her the faintly glowing jelly, and happily take the poisoned concoction in return, and deliver it, eager to get back to the lab. Your good vibes are a tad spoiled when you realize that a previous you is in the lab as well, [[but you do her best to ignore her.]]</tw-passagedata>
+<tw-passagedata pid="67" name="but you do her best to ignore her." tags="" position="5,2100">Seven dances later, you barely notice the many yous swarming around the lab. If Chekov noticed that there was more than one of you around, [[she never showed it.]]</tw-passagedata>
+<tw-passagedata pid="68" name="she never showed it." tags="" position="151,2066">Fifteen dances later, you&#39;re pretty sure she //does// [[notice.]]</tw-passagedata>
+<tw-passagedata pid="69" name="notice." tags="" position="154,2191">Five dances after that, you //know// [[she doesn&#39;t mind.]]</tw-passagedata>
+<tw-passagedata pid="70" name="she doesn&#39;t mind." tags="" position="169,2324">After the next dance, [[she kisses you for the first time.]]</tw-passagedata>
+<tw-passagedata pid="71" name="she kisses you for the first time." tags="" position="169,2474">You waste many dances making absolutely //no// progress on the royal jelly. [[It&#39;s the best time of your life.]]</tw-passagedata>
+<tw-passagedata pid="72" name="It&#39;s the best time of your life." tags="" position="169,2624">You went too far. You&#39;ve known her for what now feels like months. But no matter what hints she gleans, what mysteries she guesses at, she can&#39;t know the real you. She just knows a day of you, a few hours at most. This can&#39;t continue. [[You know that.]]</tw-passagedata>
+<tw-passagedata pid="73" name="You know that." tags="" position="279.0002999999999,2117">The next time you dance, the royal jelly is [[finished.]]</tw-passagedata>
+<tw-passagedata pid="74" name="finished." tags="" position="294,2267">Six dances later, you tell the Elder. She responds. By saying something. Doing something. You don&#39;t know. She hurries off to save the hive. You try not to cry.
+
+The Elder walks back, slowly and solemnly. She silently hands you a tissue. What she says next replaces your melancholoy with [[despair.]]</tw-passagedata>
+<tw-passagedata pid="75" name="despair." tags="" position="403,2412">&quot;WHAT DO YOU MEAN IT DIDN&#39;T WORK?&quot;
+
+&quot;It just... didn&#39;t work.&quot;
+
+&quot;//WHAT DO YOU//-&quot; You stop, suddenly exhausted, like you haven&#39;t slept in days. Or weeks. Or months.
+
+</tw-passagedata>
 </tw-storydata>
 </div>
 	<script id="script-sugarcube" type="text/javascript">
